# qrcodeplus

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  denoise.c  denoise.h  globalhistogrambinarizer.c  globalhistogrambinarizer.h  hybridbinarizer.c  hybridbinarizer.h  qrcodeplus.c
gradle/wrapper/: gradle-wrapper.properties
qrcodeplusdemo/: build.gradle
qrcodeplusdemo/src/main/: AndroidManifest.xml
qrcodeplusdemo/src/main/res/layout/: app_picker_list_item.xml  bookmark_picker_list_item.xml  capture.xml  encode.xml  history_list_item.xml  local.xml  search_book_contents.xml  search_book_contents_list_item.xml  share.xml
qrcodeplusdemo/src/main/res/layout-land/: encode.xml  share.xml
qrcodeplusdemo/src/main/res/layout-ldpi/: capture.xml
qrcodeplusdemo/src/main/res/menu/: capture.xml  encode.xml  history.xml
qrcodeplusdemo/src/main/res/values-ar/: strings.xml
qrcodeplusdemo/src/main/res/values-bg/: strings.xml
qrcodeplusdemo/src/main/res/values-ca/: strings.xml
qrcodeplusdemo/src/main/res/values-cs/: strings.xml
qrcodeplusdemo/src/main/res/values-da/: strings.xml
qrcodeplusdemo/src/main/res/values-de/: strings.xml
qrcodeplusdemo/src/main/res/values-el/: strings.xml
qrcodeplusdemo/src/main/res/values-es/: strings.xml
qrcodescanner/: build.gradle
qrcodescanner/src/main/: AndroidManifest.xml
(+175 files in other folders)
